# Backing

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml  readme.md
packaging/: CMakeLists.txt
packaging/macos/: Info.plist
packaging/macos/icons/: backing.icns
src/: CMakeLists.txt  main.cpp
src/domain/: CppRestRequestListener.cpp  CppRestRequestListener.hpp  Listener.cpp  Listener.hpp  ListenerFactory.cpp  ListenerFactory.hpp  Logger.hpp  QtLogger.cpp  QtLogger.hpp  Request.hpp  RequestListener.cpp  RequestListener.hpp  RequestListenerFactory.cpp  RequestListenerFactory.hpp  Response.hpp  TempLogger.hpp
src/domain/exception/: InvalidRequestException.hpp  InvalidResponseException.hpp  InvalidUriException.hpp  ListenerAlreadyClosedException.hpp  ListenerAlreadyStartedException.hpp  ListenerNotStartedException.hpp  MethodNotRegisteredException.hpp  UnableToCloseConnectionException.hpp  UnableToStartConnectionException.hpp
src/gui/MainWindow/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui
src/gui/widget/LoggingWidget/: LoggingWidget.cpp  LoggingWidget.hpp  LoggingWidget.ui
src/gui/widget/MethodWidget/: MethodWidget.cpp  MethodWidget.hpp  MethodWidget.ui
src/gui/widget/RequestListenerWidget/: RequestListenerWidget.cpp  RequestListenerWidget.hpp  RequestListenerWidget.ui
src/gui/widget/ResponseWidget/: ResponseWidget.cpp  ResponseWidget.hpp  ResponseWidget.ui
tests/: CMakeLists.txt
tests/domain/: tst_CppRestRequestListener.cpp  tst_Listener.cpp  tst_ListenerFactory.cpp  tst_Request.cpp  tst_RequestListenerFactory.cpp  tst_Response.cpp
tests/domain/exception/: tst_InvalidUriException.cpp  tst_ListenerAlreadyClosedException.cpp  tst_ListenerAlreadyStartedException.cpp  tst_MethodNotRegisteredException.cpp  tst_UnableToCloseConnectionException.cpp  tst_UnableToStartConnectionException.cpp
tests/mock/: MockLogger.hpp
tests/mocks/: MockLogger.hpp
